--- a/exercises.html
+++ b/exercises.html
@@ -46,7 +46,7 @@
         divP.textContent = 'Im in div too';
 
         div.appendChild(divH1);
-        div.insertBefore(divP,divH1)
+        div.insertBefore(divP,divH1);
 
     </script>
 </body>
